--- a/Rover/templates/roverWithservo.html
+++ b/Rover/templates/roverWithservo.html
@@ -7,10 +7,10 @@
         {
             width: 50%;
         }
-		.slider 
-		{
-			width: 50%;
-		}
+	.slider 
+	{
+	    width: 50%;
+	}
     </style>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script language="javascript" type="text/javascript">
@@ -30,7 +30,7 @@
 		<table align="center" class="style1">
 			<tr>
 				<td colspan="3" style="text-align: center">
-					<!--<img src="http://10.1.1.11:8081/"></img>-->
+					<img src="http://10.1.1.11:8081/"></img>
 				</td>
 			</tr>
 			<tr>
