--- a/Rover/templates/roverWithservoBox.html
+++ b/Rover/templates/roverWithservoBox.html
@@ -5,10 +5,10 @@
 	<style type="text/css">
         .style1
         { width: 50%; }
-		.LR
-		{ width: 300px; height: 150px; -webkit-appearance: slider-horizontal; writing-mode: bt-lr; }
-		.DU
-		{ width: 300px; height: 250px; -webkit-appearance: slider-vertical; writing-mode: bt-lr; }
+	.LR
+	{ width: 300px; height: 150px; -webkit-appearance: slider-horizontal; writing-mode: bt-lr; }
+	.DU
+	{ width: 300px; height: 250px; -webkit-appearance: slider-vertical; writing-mode: bt-lr; }
     </style>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>  
   </head>
@@ -52,6 +52,11 @@
 			<canvas id="myCanvas" width="300px" height="300px" style="background: #0488FB; border:2px solid #d3d3d3;"></canvas>
 		</form>
 		<script language="javascript" type="text/javascript">
+			window.oncontextmenu = function(event) {
+			event.preventDefault();
+			event.stopPropagation();
+			return false;
+			};
 			function Button_onmousedown(direction) {
 				$.ajax({ url: '/' + direction });
 			}
