--- a/Rover/templates/roverv1.html
+++ b/Rover/templates/roverv1.html
@@ -10,6 +10,11 @@
     </style>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script language="javascript" type="text/javascript">
+		window.oncontextmenu = function(event) {
+			event.preventDefault();
+			event.stopPropagation();
+			return false;
+		}
 		function Button_onmousedown(direction) {
 			$.ajax({ url: '/' + direction });
 		}
