--- a/Rover/templates/roverv3.html
+++ b/Rover/templates/roverv3.html
@@ -8,20 +8,7 @@
             width: 50%;
         }
     </style>
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script language="javascript" type="text/javascript">
-		window.oncontextmenu = function(event) {
-			event.preventDefault();
-			event.stopPropagation();
-			return false;
-		}
-		function Button_onmousedown(direction) {
-			$.ajax({ url: '/' + direction });
-		}
-		function Button_onmouseup() {
-			$.ajax({ url: '/stop' });
-		}
-	</script>  
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>  
   </head>
 	<body>
 		<h1 align="center">Rover Control</h1>
@@ -48,5 +35,33 @@
 				</td>
 			</tr>
 		</table>
+		<form action='' method='get' align="center">
+			<canvas id="myServoCanvas" width="180px" height="180px" style="background: #0488FB; border:0px solid #d3d3d3;"></canvas>
+		</form>
+		<script language="javascript" type="text/javascript">
+		window.oncontextmenu = function(event) {
+			event.preventDefault();
+			event.stopPropagation();
+			return false;
+		}
+		function Button_onmousedown(direction) {
+			$.ajax({ url: '/' + direction });
+		}
+		function Button_onmouseup() {
+			$.ajax({ url: '/stop' });
+		}
+		function doServoMouseDown(event) {
+			canvas_x = event.pageX - canvas_Servo.offsetLeft;
+			canvas_y = event.pageY - canvas_Servo.offsetTop;
+			$.ajax({ url: '/servopos?servolr='+canvas_x+'&servodu='+canvas_y });
+		}
+		var canvas_Servo = document.getElementById('myServoCanvas');
+		var ctx = canvas_Servo.getContext('2d');
+		ctx.font = '15px Comic Sans MS';
+		ctx.fillStyle = 'blue';
+		ctx.textAlign = 'center';
+		ctx.fillText('Servo Touch!', canvas_Servo.width/2, canvas_Servo.height/2); 
+		canvas_Servo.addEventListener('mousedown', doServoMouseDown, false);
+	</script>
 	</body>
 </html>
