--- a/Rover/templates/roverv3.html
+++ b/Rover/templates/roverv3.html
@@ -15,6 +15,11 @@
 		<table align="center" class="style1">
 			<tr>
 				<td colspan="3" style="text-align: center">
+					<img src="http://10.1.1.13:8081/"></img>
+				</td>
+			</tr>
+			<tr>
+				<td colspan="3" style="text-align: center">
 					<input id= "btnGo" type="image" src="static/img/forward.png" ontouchstart="Button_onmousedown('go')" ontouchend="Button_onmouseup()" />
 				</td>
 			</tr>
