--- a/Rover/templates/roverv2.html
+++ b/Rover/templates/roverv2.html
@@ -9,7 +9,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>  
   </head>
 	<body>
-		<h1 align="center">1st View</h1>
+		<h1 align="center">Rover Control</h1>
 		<form action='' method='get' align="center">
 			<canvas id="myCarCanvas" width="200px" height="200px" style="background: #0488FB; border:0px solid #d3d3d3;"></canvas>
 		</form>
