--- a/Rover/templates/roverv4.html
+++ b/Rover/templates/roverv4.html
@@ -10,9 +10,15 @@
   </head>
 	<body>
 		<h1 align="center">Rover Control</h1>
+		<tr>
+		  <td colspan="3" style="text-align: center">
+		    <img src="http://10.1.1.13:8081/"></img>
+		  </td>
+		</tr>
 		<form action='' method='get' align="center">
 			<canvas id="myCarCanvas" width="200px" height="200px" style="background: #0488FB; border:0px solid #d3d3d3;"></canvas>
 		</form>
+		<br/>
     <form action='' method='get' align="center">
 			<canvas id="myServoCanvas" width="180px" height="180px" style="background: #0488FB; border:0px solid #d3d3d3;"></canvas>
 		</form>
