--- a/Rover/templates/roverv4.html
+++ b/Rover/templates/roverv4.html
@@ -11,7 +11,7 @@
 	<body>
 		<h1 align="center">Rover Control</h1>
 		<div align="center" colspan="3" class="style1">
-		    <img src="http://10.1.1.13:8081/"></img>
+		    <img src="http://raspberrypi.local:8081/"></img>
 		</div>
 	        <br/>
 		<form action='' method='get' align="center">
