--- a/Rover/templates/roverv3.html
+++ b/Rover/templates/roverv3.html
@@ -15,7 +15,7 @@
 		<table align="center" class="style1">
 			<tr>
 				<td colspan="3" style="text-align: center">
-					<img src="http://raspberrypi.local:8081/"></img>
+					<img src="http://10.1.1.13:8081/"></img> <!--raspberrypi.local:8081 ony works in laptop-->
 				</td>
 			</tr>
 			<tr>
